--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,7 @@
 }
 
 .container {
-    /* background-color: var(--colorAqua); */
     background-color: var(--colorBackground);
-    /* height: 100vh; */
     margin: 0 10%;
     border: 1px solid var(--colorBlack);
     border-radius: 10px;
@@ -58,9 +56,10 @@
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
+    gap: 20px; 
   }
   .example-box {
-    width: 200px;
+    flex-grow: 1;
     height: 200px;
     display: flex;
     justify-content: center;
